23_power_rec/grade.txt
Grading at Tue Jan 19 09:22:11 UTC 2021
Attempting to compile power.c
power.c: In function ‘power’:
power.c:17:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
